--- a/Aprendiendo a programar.html
+++ b/Aprendiendo a programar.html
@@ -14,7 +14,7 @@ interesantes.</H2> </DIV>
 			<DIV>REGISTRO</DIV>
 <!--  <FORM ACTION="mailto:jredrejo@gmail.com" METHOD="POST" ENCTYPE="TEXT/PLAIN">  -->
 
-<FORM ACTION="/kk.html" METHOD="POST" ENCTYPE="TEXT/PLAIN">
+<FORM ACTION="" METHOD="POST" ENCTYPE="TEXT/PLAIN">
 			Nombre:<br>
 			<input type="text" name="Nombre">
 			<br>
