--- a/Aprendiendo a programar.html
+++ b/Aprendiendo a programar.html
@@ -12,14 +12,10 @@ se que tendra,</H2> </DIV>
 interesantes.</H2> </DIV>
 			</BODY>
 			<DIV>REGISTRO</DIV>
-<!--  <FORM ACTION="mailto:jredrejo@gmail.com" METHOD="POST" ENCTYPE="TEXT/PLAIN">  -->
-
-<FORM ACTION="" METHOD="POST" ENCTYPE="TEXT/PLAIN">
-			Nombre:<br>
-			<input type="text" name="Nombre">
+			
+			<input type="text" name="Nombre" value="Nombre">
 			<br>
-			Apellidos:<br>
-			<input type="text" name="Apellidos" value="hola">
+			<input type="text" name="Apellidos" value="Apellidos">
 			<br>
 			Contraseña:<br>
 			<input type="password" name=Contraseña>
