--- a/Aprendiendo a programar.html
+++ b/Aprendiendo a programar.html
@@ -48,7 +48,7 @@ interesantes.</H2> </DIV>
 					<HR>
 		<h2><FONT COLOR=Blue>Día 1</FONT></h2>
 			<body>
-	<DIV> Hoy solo voy a hacer unas cuantas puebas con los formantos y el tamaño de las letras, aunque si hay tiempo, haré algo mas.</DIV>
+	<DIV> Hoy solo voy a hacer unas cuantas puebas con los formantos y el tamaño de las letras, aunque si hay tiempo, haré algo más.</DIV>
 <HR>
 <H3><FONT COLOR=green><U>Tamaño de las letras y colores</U></FONT></H3>
 	<DIV><H1>A, E, I, O, U</H1></DIV>
